objects/advitya__mJSON__c.object
<CustomObject>
    <fields>
        <fullName>advitya__Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>advitya__mFields__c</fullName>
        <label>mFields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>advitya__masterJSON__c</fullName>
        <label>masterJSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>mJSON</label>
    <nameField>
        <displayFormat>JS-{000}</displayFormat>
        <label>mJSON No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>mJSON</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>